Listing form link, Danielle Albuquerque, Violet mobile, Search Projects intro

--- a/index.html
+++ b/index.html
@@ -430,6 +430,9 @@
 <section id="route-search-projects" data-route="search-projects" hidden>
   <div class="container stack">
     <h2>Search Projects</h2>
+    <p class="muted" style="max-width:720px">Do you have a short-term need for occupancy, a continuous check-up, or a one-time need to have someone come check on your home? Get started here with the form below.</p>
+    <a class="btn brand" href="https://docs.google.com/forms/d/e/1FAIpQLSfagHhb53pkOUKI0YdL98czwcWz_aXYtOfx2e1-IxT-YEO7eQ/viewform?usp=publish-editor" target="_blank" rel="noopener">Home owner / gap sitter request form →</a>
+
     <div class="card" style="background:linear-gradient(135deg, var(--muted) 0%, #fff 100%);border:2px solid var(--brand)">
       <div class="content stack">
         <span class="eyebrow">How it works</span>
@@ -726,7 +729,7 @@
     {
       id:'elizabeth',
       name:'Elizabeth',
-      location:'Your City',
+      location:'Atlanta',
       tagline:'Union member • Homeowner • Pet owner 15+ years',
       skills:['Security','CPR Certified','Carpentry','Drywall','Trust Certified','Pet care','Handyman','Property Check-ins','Cleaning'],
       start:'2025-09-01',
@@ -737,7 +740,7 @@
     {
       id:'danielle',
       name:'Danielle',
-      location:'Your City',
+      location:'Albuquerque',
       tagline:'Registered dietitian • Homeowner • Government employee',
       skills:['CPR Certified','Pet care','Property Check-ins','Gapsitting'],
       start:'2025-09-01',
@@ -748,18 +751,18 @@
     {
       id:'john',
       name:'John',
-      location:'Your City',
+      location:'Atlanta',
       tagline:'State licensed (NC) • Background checked • Homeowner • Union member',
       skills:['Plumbing','Painting','Water Removal','Pet care','Property Check-ins','Handyman','Cleaning'],
       start:'2025-09-01',
       verified:true,
       photo:'images/projects/john.PNG',
-      bio:'State licensed (NC), background checked. Dealer\'s license. Water remediation and removal. Truck hauling, trailer hookups, long distance moves. Professional cleaner. Organic and hypoallergenic professional care and cleaning. Pet owner 15+ years. Security camera replacement certified.'
+      bio:'State licensed (NC), background checked. Gaming license (State of NC). Water remediation and removal. Truck hauling, trailer hookups, long distance moves. Professional cleaner. Organic and hypoallergenic professional care and cleaning. Pet owner 15+ years. Security camera replacement certified.'
     },
     {
       id:'violet',
       name:'Violet',
-      location:'Your City',
+      location:'Your City (mobile)',
       tagline:'Professional mold remediation • Trust certified • Homeowner • Union member',
       skills:['Mold Remediation','Trust Certified','Pet care','Property Check-ins','Gapsitting'],
       start:'2025-09-01',
@@ -770,8 +773,8 @@
     {
       id:'nichole',
       name:'Nichole Wleklinski',
-      location:'Chicago, IL (mobile)',
-      tagline:'Master in Management (UIUC) • UGA • Landlord • Homeowner • Food safety certified • Trust certified',
+      location:'Mexico City (mobile)',
+      tagline:'Master in Management (UIUC) • Landlord • Homeowner • Food safety certified • Trust certified',
       skills:['Spanish','Trust Certified','Food Safety','Pet care','Security','Handyman','Property Check-ins'],
       start:'2025-09-25',
       verified:true,
@@ -783,7 +786,7 @@
     {
       id:'anna',
       name:'Anna',
-      location:'Your City',
+      location:'Atlanta (mobile)',
       tagline:'Digital nomad • Organization • Professional buyer • Vintage professional • Spanish • Union member',
       skills:['Spanish','Education','Property Check-ins','Gapsitting','Pet care'],
       start:'2025-09-01',
@@ -801,7 +804,6 @@
     {id:'dorothyhouse', title:"Property watch — secure house, contractor oversight", city:'Your City', from:'2025-09-01', to:'2025-10-15', needs:['Secure house','Oversee construction','Maintain contractor hours','Photo reports'], pay:[350,700], bidsLeft:5, img:'images/projects/dorothyhouse.jpg', imgPlaceholder:'House', description:'Ongoing property watch with contractor oversight. Maintain security, coordinate with trades as needed, and send regular photo updates. Stipend negotiable based on scope.'},
     {id:'stairsrepair', title:"Keep entrance secured — 1 week", city:'Your City', from:'2025-09-08', to:'2025-09-15', needs:['Secure entrance','1 week presence','Keep entrance secured'], pay:[150,300], bidsLeft:3, img:'images/projects/stairsrepair.jpg', imgPlaceholder:'Stairs', description:'Short 1-week sit: keep entrance secured while repairs are scheduled. Minimal duties — presence and lock-up. Perfect for a local or someone passing through.'},
     {id:'stairsfixed', title:"Project complete: Stairs repair", city:'Your City', from:'2025-08-01', to:'2025-08-20', needs:['Stairs repair','Project complete','Showcase'], pay:[0,0], bidsLeft:0, img:'images/projects/stairsfixed.JPG', imgPlaceholder:'Stairs', showcase:true, completedBy:'Nichole123', possibleEarnings:[400,600], description:'This listing is closed. Stairs repair was completed successfully. Shown here as an example of a finished project and possible earnings for similar work.'},
-    {id:'downed-tree', title:"Downed tree backyard — yard secure & cleanup", city:'Your City', from:'2025-09-20', to:'2025-10-05', needs:['Backyard','Downed tree','Yard secure','Cleanup','Photo reports'], pay:[200,450], bidsLeft:5, img:'images/projects/img_1396.jpg', imgPlaceholder:'Backyard', description:'Downed tree in backyard. Need someone to keep the yard secure, document condition with photos, and coordinate cleanup if needed. Photo reports for insurance.'},
     {id:'downed-tree-dogs', title:"Large tree in backyard — away for summer, dog-friendly home", city:'Your City', from:'2025-06-01', to:'2025-08-31', needs:['Dog friendly','Tree removal','Oversee removal','Hauling','Trusted presence','Photo reports'], pay:[250,500], bidsLeft:5, img:'images/projects/dogswelcomedownedtree.jpg', imgPlaceholder:'Backyard', description:'There is a very large tree in the backyard. I will be away for the summer and it just fell. It\'s a dog-friendly home. I need someone to help oversee the tree removal — and if they can do extra work hauling it would save me some money — but a trusted presence is what I really need during this time.'},
   ];
 
